Fix crasher in mouse events (bug 185850), r=kmcclusk@netscape.com, sr=roc+moz@cs.cmu.edu